--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,12 @@ httpx==0.25.0
 idna==3.4
 pycodestyle==2.10.0
 python-telegram-bot==20.6
-requests==2.28.1
+requests==2.28.1clear
 sniffio==1.3.0
 urllib3==1.26.12
+click==8.1.7
+gTTS==2.4.0
+pydub==0.25.1
+python-dotenv==1.0.0
+requests==2.28.1
+SpeechRecognition==3.10.0
