--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,9 @@ pydub==0.25.1
 python-dotenv==1.0.0
 requests==2.28.1
 SpeechRecognition==3.10.0
+black==23.10.1
+isort==5.12.0
+mypy-extensions==1.0.0
+packaging==23.2
+pathspec==0.11.2
+platformdirs==3.11.0
