--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,12 @@ mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
 platformdirs==3.11.0
+aiohttp==3.8.6
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.1.0
+frozenlist==1.4.0
+multidict==6.0.4
+openai==0.28.1
+tqdm==4.66.1
+yarl==1.9.2
