--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,56 @@
-psycopg2-binary==2.9.9
+aiohttp==3.8.6
+aiosignal==1.3.1
 anyio==4.0.0
+async-timeout==4.0.3
+attrs==23.1.0
 autopep8==2.0.1
-certifi==2022.9.24
-charset-normalizer==2.1.1
-h11==0.14.0
-httpcore==0.18.0
-httpx==0.25.0
-idna==3.4
-pycodestyle==2.10.0
-python-telegram-bot==20.6
-sniffio==1.3.0
-urllib3==1.26.12
-click==8.1.7
-gTTS==2.4.0
-pydub==0.25.1
-python-dotenv==1.0.0
-requests==2.28.1
-SpeechRecognition==3.10.0
 black==23.10.1
+boto==2.49.0
+boto3==1.34.13
+botocore==1.34.13
+certifi==2022.9.24
+chardet==3.0.4
+charset-normalizer==2.1.1
+click==8.1.7
+flake8==6.1.0
+frozenlist==1.4.0
+googletrans==4.0.0rc1
+gTTS==2.4.0
+h11==0.14.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2024.1.5
+httpcore==1.0.2
+httpx==0.25.2
+hyperframe==5.2.0
+idna==2.10
 isort==5.12.0
+jmespath==1.0.1
+langdetect==1.0.9
+langid==1.1.6
+mccabe==0.7.0
+multidict==6.0.4
+mypy==1.7.1
 mypy-extensions==1.0.0
+numpy==1.26.3
+openai==0.28.1
 packaging==23.2
 pathspec==0.11.2
 platformdirs==3.11.0
-aiohttp==3.8.6
-aiosignal==1.3.1
-async-timeout==4.0.3
-attrs==23.1.0
-frozenlist==1.4.0
-multidict==6.0.4
-openai==0.28.1
+psycopg2-binary==2.9.9
+pycodestyle==2.11.1
+pydub==0.25.1
+pyflakes==3.1.0
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-telegram-bot==20.7
+requests==2.28.1
+rfc3986==1.5.0
+s3transfer==0.10.0
+six==1.16.0
+sniffio==1.3.0
+SpeechRecognition==3.10.0
 tqdm==4.66.1
+typing_extensions==4.8.0
+urllib3==1.26.12
 yarl==1.9.2
